<resources>
    <string name="app_name">iCrawler</string>

    <string name="TermsAndConditions">By signing up or signing in, you agree to our <u>Terms &amp; Privacy Policy</u></string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="terms_and_conditions"> Terms and Conditions</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="next">Next</string>
    <string name="or">or</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_link"><u>Sign up</u></string>
    <string name="signin_link"><u>Sign in</u></string>
    <string name="have_account"><u>I have an account</u></string>
    <string name="create_account"><u>Create account</u></string>
    <string name="empty_input_error_message">Please fill out this field.</string>
    <string name="icon_description">App icon</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="progress_signing_in">Signing in</string>
    <string name="progress_signing_up">Signing up</string>
    <string name="request_unknown_error">Unknown error occurred. Please check your internet connection</string>
    <string name="help_dialog_content">Password must be at least 6 characters log </string>
    <string name="password_hint">Must be at least 6 characters long </string>
    <string name="got_it_text">Got it!</string>
    <string name="help_dialog_title">Form Completion</string>
    <string name="in_need_help"><u>I need help</u></string>
    <string name="action_help">Help</string>
    <string name="login_register_dialog_title">You\'re all set!</string>
    <string name="login_register_dialog_content">Thank you for using iCrawler, Would you like to learn more about iCrawler App?</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="yes">Yes</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
