<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f0f0"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="the5concurrentnodes.mobilemonitoringapp.LoginActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/icon"
        android:contentDescription="@string/icon_description" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:text="@string/sign_in"/>

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/form_container_bg"
        android:layout_below="@+id/login_title">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:background="@null"
            android:ellipsize="end"
            android:textSize="22sp"
            android:hint="@string/email"
            android:singleLine="true"/>

        <View
            android:id="@+id/input_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/login_email"
            android:background="@color/grey"
            />

        <LinearLayout
            android:id="@+id/form_last_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/input_divider">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@null"
                android:ellipsize="end"
                android:padding="10dp"
                android:textSize="22sp"
                android:hint="@string/password"
                android:singleLine="true"/>

            <ImageButton
                android:id="@+id/show_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_eye"
                android:background="@null"
                android:padding="8dp"/>
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_form"
        android:textColor="@color/black"
        android:typeface="serif"
        android:textSize="18sp"
        android:text="@string/forgot_password"
        android:background="@null"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="3dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_link"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:text="@string/sign_in"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/login_button">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="20dp"
            android:typeface="serif"
            android:textColor="@color/black"
            android:text="@string/or"/>

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="3dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_layout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:text="@string/signup_link"
        android:background="@null" />

</RelativeLayout>
