<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/login_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="48dp"
            android:orientation="vertical"
            android:background="?attr/colorPrimary">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEmailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:hint="@string/email"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registerPasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:hint="@string/password"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirmPasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:hint="@string/confirm_password"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favorite"
        android:layout_alignBottom="@+id/cont"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-24dp"
        android:src="@mipmap/ic_action_send_now"
        fab:fab_colorNormal="@color/colorAccent"
        android:onClick="onRegisterButtonClicked"/>

    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:layout_below="@id/favorite">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="@string/or"/>

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="3dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_layout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:text="@string/sign_in"
        android:background="@null"
        android:onClick="toSignIn"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>